# ATCSIndProj

./: CMakeLists.txt  README.md  demo.sh
Executables/: CMakeLists.txt  _test.cpp  generate_joukowsky.cpp  generate_karman_trefftz.cpp
code/: CMakeLists.txt
code/AirfoilTools/: CMakeLists.txt  defs.t.cpp  joukowsky.cpp  joukowsky.hpp  joukowsky.t.cpp  karman_trefftz.cpp  karman_trefftz.hpp  karman_trefftz.t.cpp  point_maker.cpp  point_maker.hpp  point_maker.t.cpp
code/Executables/: CMakeLists.txt  _test.cpp
code/MSST/: CMakeLists.txt  bar.hpp  coordinates.cpp  coordinates.hpp  suspension.cpp  suspension.hpp
code/Scripts/: visualizer.py
docs/: howto.md  joukowsky.md  karman-trefftz.md  structure.md
src/: defs.hpp  karman_trefftz.cpp  point_maker.hpp
